--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
+    "@types/bootstrap": "^5.1.6",
     "@types/enzyme": "^3.10.10",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "4.7.9",
@@ -231,17 +232,32 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@electron/typescript-definitions": "^8.9.6",
+    "@types/pouchdb": "^6.4.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.1",
+    "dayjs": "^1.10.7",
+    "directory-tree": "^3.0.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.1",
     "electron-updater": "^4.3.9",
+    "fdir": "^5.1.0",
     "history": "4.x.x",
+    "loglevel": "^1.8.0",
+    "mime-db": "^1.51.0",
+    "nanoid": "^3.1.30",
     "node-disk-info": "^1.3.0",
+    "path-browserify": "^1.0.1",
+    "pouchdb": "^7.2.2",
+    "pouchdb-find": "^7.2.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
+    "react-bootstrap-icons": "^1.6.1",
+    "react-data-table-component": "^7.4.5",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "regenerator-runtime": "^0.13.9"
+    "regenerator-runtime": "^0.13.9",
+    "winston": "^3.3.3"
   },
   "devEngines": {
     "node": ">=14.x",
