--- a/release/app/package.json
+++ b/release/app/package.json
@@ -14,5 +14,8 @@
     "link-modules": "node -r ts-node/register ../../.erb/scripts/link-modules.js",
     "postinstall": "npm run electron-rebuild && npm run link-modules"
   },
+  "dependencies": {
+    "pouchdb": "^7.2.2"
+  },
   "license": "MIT"
 }
