--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,10 @@
   "compilerOptions": {
     "target": "es2021",
     "module": "commonjs",
-    "lib": ["dom", "esnext"],
+    "lib": [
+      "dom",
+      "esnext"
+    ],
     "declaration": true,
     "declarationMap": true,
     "jsx": "react-jsx",
@@ -11,8 +14,8 @@
     "sourceMap": true,
     "baseUrl": "./src",
     /* Additional Checks */
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     /* Module Resolution Options */
@@ -24,7 +27,9 @@
     "outDir": "release/app/dist",
     "typeRoots": [
       "./node_modules/@types/",
-      "./src/renderer/global.d.ts"
+      "./node_modules/electron-better-ipc/index.d.ts",
+      "./src/renderer/global.d.ts",
+      "./src/renderer/loglevel.d.ts"
     ]
   },
   "exclude": ["test", "release/build", "release/app/dist", ".erb/dll"]
