--- a/.erb/configs/.eslintrc
+++ b/.erb/configs/.eslintrc
@@ -2,6 +2,6 @@
   "rules": {
     "no-console": "off",
     "global-require": "off",
-    "import/no-dynamic-require": "on"
+    "import/no-dynamic-require": 1
   }
 }
