--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "publish": {
       "provider": "github",
       "owner": "file-base",
-      "repo": "electron-react-boilerplate"
+      "repo": "efile-base"
     }
   },
   "repository": {
@@ -106,29 +106,23 @@
       "name": "Kevin Brisson",
       "email": "kbrisso@gmail.com",
       "url": "https://github.com/kbrisso"
-    },
-    {
-      "name": "John Tran",
-      "email": "jptran318@gmail.com",
-      "url": "https://github.com/jooohhn"
     }
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/electron-react-boilerplate/electron-react-boilerplate/issues"
+    "url": "https://github.com/kbrisso/file-base/blob/main/LICENSE"
   },
   "keywords": [
     "electron",
-    "boilerplate",
     "react",
     "typescript",
-    "ts",
-    "sass",
-    "webpack",
+    "file manager",
+    "file database",
+    "filebase",
     "hot",
     "reload"
   ],
-  "homepage": "https://github.com/electron-react-boilerplate/electron-react-boilerplate#readme",
+  "homepage": "https://github.com/kbrisso/file-base/blob/main/README.md",
   "jest": {
     "testURL": "http://localhost/",
     "testEnvironment": "jsdom",
@@ -210,6 +204,7 @@
     "lint-staged": "^11.2.6",
     "mini-css-extract-plugin": "^2.4.3",
     "opencollective-postinstall": "^2.0.3",
+    "pouchdb": "^7.2.2",
     "prettier": "^2.4.1",
     "react-refresh": "^0.10.0",
     "react-refresh-typescript": "^2.0.2",
@@ -231,8 +226,10 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@electron/docs-parser": "^0.12.3",
     "@electron/typescript-definitions": "^8.9.6",
     "@types/pouchdb": "^6.4.0",
+    "@typescript-eslint/parser": "^5.8.1",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.1",
     "dayjs": "^1.10.7",
@@ -245,14 +242,14 @@
     "loglevel": "^1.8.0",
     "mime-db": "^1.51.0",
     "nanoid": "^3.1.30",
+    "node-abi": "^3.5.0",
     "node-disk-info": "^1.3.0",
     "path-browserify": "^1.0.1",
-    "pouchdb": "^7.2.2",
     "pouchdb-find": "^7.2.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-bootstrap-icons": "^1.6.1",
-    "react-data-table-component": "^7.4.5",
+    "react-data-table-component": "^7.4.6",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "regenerator-runtime": "^0.13.9",
@@ -261,9 +258,6 @@
   "devEngines": {
     "node": ">=14.x",
     "npm": ">=7.x"
-  },
-  "collective": {
-    "url": "https://opencollective.com/electron-react-boilerplate-594"
   },
   "browserslist": [],
   "prettier": {
