Refactor and design commit.

--- a/package.json
+++ b/package.json
@@ -155,6 +155,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.1",
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
     "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
     "@types/bootstrap": "^5.1.6",
     "@types/enzyme": "^3.10.10",
     "@types/enzyme-adapter-react-16": "^1.0.6",
@@ -203,7 +204,6 @@
     "lint-staged": "^11.2.6",
     "mini-css-extract-plugin": "^2.4.3",
     "opencollective-postinstall": "^2.0.3",
-    "pouchdb": "^7.2.2",
     "prettier": "^2.4.1",
     "react-refresh": "^0.10.0",
     "react-refresh-typescript": "^2.0.2",
