--- a/src/main/data/Extensions.json
+++ b/src/main/data/Extensions.json
@@ -1,191 +1,191 @@
 {
-  "ogm": "video",
-  "doc": "text",
-  "class": "code",
-  "js": "code",
-  "swift": "code",
-  "cc": "code",
-  "tga": "image",
-  "ape": "audio",
-  "woff2": "font",
-  "cab": "archiv",
-  "whl": "archiv",
-  "mpe": "video",
-  "rmvb": "video",
-  "srt": "video",
-  "pdf": "text",
-  "xz": "archiv",
-  "exe": "exec",
-  "m4a": "audio",
-  "crx": "exec",
-  "vob": "video",
-  "tif": "image",
-  "gz": "archiv",
-  "roq": "video",
-  "m4v": "video",
-  "gif": "image",
-  "rb": "code",
-  "3g2": "video",
-  "m4": "code",
-  "ar": "archiv",
-  "vb": "code",
-  "sid": "audio",
-  "ai": "image",
-  "wma": "audio",
-  "pea": "archiv",
-  "bmp": "image",
-  "py": "code",
-  "mp4": "video",
-  "m4p": "video",
-  "ods": "sheet",
-  "jpeg": "image",
-  "command": "exec",
-  "azw4": "book",
-  "otf": "font",
-  "ebook": "text",
-  "rtf": "text",
-  "ttf": "font",
-  "mobi": "book",
-  "ra": "audio",
-  "flv": "video",
-  "ogv": "video",
-  "mpg": "video",
-  "xls": "sheet",
-  "jpg": "image",
-  "mkv": "video",
-  "nsv": "video",
-  "mp3": "audio",
-  "kmz": "image",
-  "java": "code",
-  "lua": "code",
-  "m2v": "video",
-  "deb": "archiv",
-  "rst": "text",
-  "csv": "sheet",
-  "pls": "audio",
-  "pak": "archiv",
-  "egg": "archiv",
-  "tlz": "archiv",
-  "c": "code",
-  "cbz": "book",
-  "xcodeproj": "code",
-  "iso": "archiv",
-  "xm": "audio",
-  "azw": "book",
-  "webm": "video",
-  "3ds": "image",
-  "azw6": "book",
-  "azw3": "book",
-  "php": "code",
-  "kml": "image",
-  "woff": "font",
-  "log": "text",
-  "zipx": "archiv",
-  "3gp": "video",
-  "po": "code",
-  "mpa": "audio",
-  "mng": "video",
-  "wps": "text",
-  "wpd": "text",
-  "a": "archiv",
-  "s7z": "archiv",
-  "ics": "sheet",
-  "tex": "text",
-  "go": "code",
-  "ps": "image",
-  "org": "text",
-  "sh": "exec",
-  "msg": "text",
-  "xml": "code",
-  "cpio": "archiv",
-  "epub": "book",
-  "docx": "text",
-  "lha": "archiv",
-  "flac": "audio",
-  "odp": "slide",
-  "wmv": "video",
-  "vcxproj": "code",
-  "mar": "archiv",
-  "eot": "font",
-  "less": "web",
-  "asf": "video",
-  "apk": "archiv",
-  "css": "web",
-  "mp2": "video",
-  "odt": "text",
-  "patch": "code",
-  "wav": "audio",
-  "msi": "exec",
-  "rs": "code",
-  "gsm": "audio",
-  "ogg": "video",
-  "cbr": "book",
-  "azw1": "book",
-  "m": "code",
-  "dds": "image",
-  "h": "code",
-  "dmg": "archiv",
-  "mid": "audio",
-  "psd": "image",
-  "dwg": "image",
-  "aac": "audio",
-  "s3m": "audio",
-  "cs": "code",
-  "cpp": "code",
-  "au": "audio",
-  "aiff": "audio",
-  "diff": "code",
-  "avi": "video",
-  "bat": "exec",
-  "html": "code",
-  "pages": "text",
-  "bin": "exec",
-  "txt": "text",
-  "rpm": "archiv",
-  "m3u": "audio",
-  "max": "image",
-  "vcf": "sheet",
-  "svg": "image",
-  "ppt": "slide",
-  "clj": "code",
-  "png": "image",
-  "svi": "video",
-  "tiff": "image",
-  "tgz": "archiv",
-  "mxf": "video",
-  "7z": "archiv",
-  "drc": "video",
-  "yuv": "video",
-  "mov": "video",
-  "tbz2": "archiv",
-  "bz2": "archiv",
-  "gpx": "image",
-  "shar": "archiv",
-  "xcf": "image",
-  "dxf": "image",
-  "jar": "archiv",
-  "qt": "video",
-  "tar": "archiv",
-  "xpi": "archiv",
-  "zip": "archiv",
-  "thm": "image",
-  "cxx": "code",
-  "3dm": "image",
-  "rar": "archiv",
-  "md": "text",
-  "scss": "web",
-  "mpv": "video",
-  "webp": "image",
-  "war": "archiv",
-  "pl": "code",
-  "xlsx": "sheet",
-  "mpeg": "video",
-  "aaf": "video",
-  "avchd": "video",
-  "mod": "audio",
-  "rm": "video",
-  "it": "audio",
-  "wasm": "web",
-  "el": "code",
-  "eps": "image"
+  "OGM": "VIDEO",
+  "DOC": "TEXT",
+  "CLASS": "CODE",
+  "JS": "CODE",
+  "SWIFT": "CODE",
+  "CC": "CODE",
+  "TGA": "IMAGE",
+  "APE": "AUDIO",
+  "WOFF2": "FONT",
+  "CAB": "ARCHIV",
+  "WHL": "ARCHIV",
+  "MPE": "VIDEO",
+  "RMVB": "VIDEO",
+  "SRT": "VIDEO",
+  "PDF": "TEXT",
+  "XZ": "ARCHIV",
+  "EXE": "EXEC",
+  "M4A": "AUDIO",
+  "CRX": "EXEC",
+  "VOB": "VIDEO",
+  "TIF": "IMAGE",
+  "GZ": "ARCHIV",
+  "ROQ": "VIDEO",
+  "M4V": "VIDEO",
+  "GIF": "IMAGE",
+  "RB": "CODE",
+  "3G2": "VIDEO",
+  "M4": "CODE",
+  "AR": "ARCHIV",
+  "VB": "CODE",
+  "SID": "AUDIO",
+  "AI": "IMAGE",
+  "WMA": "AUDIO",
+  "PEA": "ARCHIV",
+  "BMP": "IMAGE",
+  "PY": "CODE",
+  "MP4": "VIDEO",
+  "M4P": "VIDEO",
+  "ODS": "SHEET",
+  "JPEG": "IMAGE",
+  "COMMAND": "EXEC",
+  "AZW4": "BOOK",
+  "OTF": "FONT",
+  "EBOOK": "TEXT",
+  "RTF": "TEXT",
+  "TTF": "FONT",
+  "MOBI": "BOOK",
+  "RA": "AUDIO",
+  "FLV": "VIDEO",
+  "OGV": "VIDEO",
+  "MPG": "VIDEO",
+  "XLS": "SHEET",
+  "JPG": "IMAGE",
+  "MKV": "VIDEO",
+  "NSV": "VIDEO",
+  "MP3": "AUDIO",
+  "KMZ": "IMAGE",
+  "JAVA": "CODE",
+  "LUA": "CODE",
+  "M2V": "VIDEO",
+  "DEB": "ARCHIV",
+  "RST": "TEXT",
+  "CSV": "SHEET",
+  "PLS": "AUDIO",
+  "PAK": "ARCHIV",
+  "EGG": "ARCHIV",
+  "TLZ": "ARCHIV",
+  "C": "CODE",
+  "CBZ": "BOOK",
+  "XCODEPROJ": "CODE",
+  "ISO": "ARCHIV",
+  "XM": "AUDIO",
+  "AZW": "BOOK",
+  "WEBM": "VIDEO",
+  "3DS": "IMAGE",
+  "AZW6": "BOOK",
+  "AZW3": "BOOK",
+  "PHP": "CODE",
+  "KML": "IMAGE",
+  "WOFF": "FONT",
+  "LOG": "TEXT",
+  "ZIPX": "ARCHIV",
+  "3GP": "VIDEO",
+  "PO": "CODE",
+  "MPA": "AUDIO",
+  "MNG": "VIDEO",
+  "WPS": "TEXT",
+  "WPD": "TEXT",
+  "A": "ARCHIV",
+  "S7Z": "ARCHIV",
+  "ICS": "SHEET",
+  "TEX": "TEXT",
+  "GO": "CODE",
+  "PS": "IMAGE",
+  "ORG": "TEXT",
+  "SH": "EXEC",
+  "MSG": "TEXT",
+  "XML": "CODE",
+  "CPIO": "ARCHIV",
+  "EPUB": "BOOK",
+  "DOCX": "TEXT",
+  "LHA": "ARCHIV",
+  "FLAC": "AUDIO",
+  "ODP": "SLIDE",
+  "WMV": "VIDEO",
+  "VCXPROJ": "CODE",
+  "MAR": "ARCHIV",
+  "EOT": "FONT",
+  "LESS": "WEB",
+  "ASF": "VIDEO",
+  "APK": "ARCHIV",
+  "CSS": "WEB",
+  "MP2": "VIDEO",
+  "ODT": "TEXT",
+  "PATCH": "CODE",
+  "WAV": "AUDIO",
+  "MSI": "EXEC",
+  "RS": "CODE",
+  "GSM": "AUDIO",
+  "OGG": "VIDEO",
+  "CBR": "BOOK",
+  "AZW1": "BOOK",
+  "M": "CODE",
+  "DDS": "IMAGE",
+  "H": "CODE",
+  "DMG": "ARCHIV",
+  "MID": "AUDIO",
+  "PSD": "IMAGE",
+  "DWG": "IMAGE",
+  "AAC": "AUDIO",
+  "S3M": "AUDIO",
+  "CS": "CODE",
+  "CPP": "CODE",
+  "AU": "AUDIO",
+  "AIFF": "AUDIO",
+  "DIFF": "CODE",
+  "AVI": "VIDEO",
+  "BAT": "EXEC",
+  "HTML": "CODE",
+  "PAGES": "TEXT",
+  "BIN": "EXEC",
+  "TXT": "TEXT",
+  "RPM": "ARCHIV",
+  "M3U": "AUDIO",
+  "MAX": "IMAGE",
+  "VCF": "SHEET",
+  "SVG": "IMAGE",
+  "PPT": "SLIDE",
+  "CLJ": "CODE",
+  "PNG": "IMAGE",
+  "SVI": "VIDEO",
+  "TIFF": "IMAGE",
+  "TGZ": "ARCHIV",
+  "MXF": "VIDEO",
+  "7Z": "ARCHIV",
+  "DRC": "VIDEO",
+  "YUV": "VIDEO",
+  "MOV": "VIDEO",
+  "TBZ2": "ARCHIV",
+  "BZ2": "ARCHIV",
+  "GPX": "IMAGE",
+  "SHAR": "ARCHIV",
+  "XCF": "IMAGE",
+  "DXF": "IMAGE",
+  "JAR": "ARCHIV",
+  "QT": "VIDEO",
+  "TAR": "ARCHIV",
+  "XPI": "ARCHIV",
+  "ZIP": "ARCHIV",
+  "THM": "IMAGE",
+  "CXX": "CODE",
+  "3DM": "IMAGE",
+  "RAR": "ARCHIV",
+  "MD": "TEXT",
+  "SCSS": "WEB",
+  "MPV": "VIDEO",
+  "WEBP": "IMAGE",
+  "WAR": "ARCHIV",
+  "PL": "CODE",
+  "XLSX": "SHEET",
+  "MPEG": "VIDEO",
+  "AAF": "VIDEO",
+  "AVCHD": "VIDEO",
+  "MOD": "AUDIO",
+  "RM": "VIDEO",
+  "IT": "AUDIO",
+  "WASM": "WEB",
+  "EL": "CODE",
+  "EPS": "IMAGE"
 }
