--- a/package.json
+++ b/package.json
@@ -229,6 +229,7 @@
     "@electron/typescript-definitions": "^8.9.6",
     "@types/pouchdb": "^6.4.0",
     "@typescript-eslint/parser": "^5.8.1",
+    "ansi-regex": "^6.0.1",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.1",
     "dayjs": "^1.10.7",
@@ -243,8 +244,11 @@
     "nanoid": "^3.1.30",
     "node-abi": "^3.5.0",
     "node-disk-info": "^1.3.0",
+    "node-fetch": "^3.2.0",
     "path-browserify": "^1.0.1",
-    "pouchdb-find": "^7.2.2",
+    "pouchdb": "^7.2.2",
+    "pouchdb-fetch": "^7.0.0",
+    "pouchdb-find": "^7.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-bootstrap-icons": "^1.6.1",
