Refactor and design changes. Code clean up.

--- a/.gitignore
+++ b/.gitignore
@@ -116,8 +116,6 @@ dist
 /.erb/dll/renderer.json
 /.idea/vcs.xml
 /.idea/watcherTasks.xml
-/db/**
 /release/**
 /.erb/dll/**
-/.erb/dll/
-/db/
+/db/file-base/**
