--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "ts-node ./.erb/scripts/check-port-in-use.js && npm run start:renderer",
     "start:main": "cross-env NODE_ENV=development electron -r ts-node/register/transpile-only ./src/main/main.ts",
     "start:renderer": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack serve --config ./.erb/configs/webpack.config.renderer.dev.ts",
-    "test": "jest"
+    "test": "jest",
+    "wdio": "wdio run test/wdio.conf.ts"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -160,7 +161,8 @@
     "@types/enzyme": "^3.10.10",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "4.7.9",
-    "@types/jest": "^27.0.2",
+    "@types/jest": "^27.4.1",
+    "@types/mocha": "^9.1.0",
     "@types/node": "16.11.6",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
@@ -228,7 +230,10 @@
     "@electron/docs-parser": "^0.12.3",
     "@electron/typescript-definitions": "^8.9.6",
     "@types/pouchdb": "^6.4.0",
-    "@typescript-eslint/parser": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.0",
+    "@wdio/devtools-service": "^7.17.4",
+    "@wdio/local-runner": "^7.17.4",
+    "@wdio/mocha-framework": "^7.17.3",
     "ansi-regex": "^6.0.1",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
@@ -241,6 +246,7 @@
     "history": "4.x.x",
     "loglevel": "^1.8.0",
     "mime-db": "^1.51.0",
+    "mocha": "^9.2.2",
     "nanoid": "^3.1.30",
     "node-abi": "^3.8.0",
     "node-disk-info": "^1.3.0",
@@ -256,6 +262,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "regenerator-runtime": "^0.13.9",
+    "webdriverio": "^7.17.4",
     "winston": "^3.6.0"
   },
   "devEngines": {
