--- a/package.json
+++ b/package.json
@@ -171,6 +171,7 @@
     "@types/webpack-env": "^1.16.3",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "browserslist-config-erb": "^0.0.3",
+    "async": ">=2.6.4",
     "chalk": "^4.1.2",
     "concurrently": "^6.3.0",
     "core-js": "^3.19.0",
@@ -183,9 +184,6 @@
     "electron-devtools-installer": "^3.2.0",
     "electron-notarize": "^1.1.1",
     "electron-rebuild": "^3.2.3",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "enzyme-to-json": "^3.6.2",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-erb": "^4.0.3",
@@ -222,13 +220,15 @@
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "pouchdb": "^7.3.0"
   },
   "dependencies": {
     "@electron/docs-parser": "^0.12.3",
     "@electron/typescript-definitions": "^8.9.6",
     "@types/pouchdb": "^6.4.0",
     "@typescript-eslint/parser": "^5.15.0",
+    "async": "^3.2.3",
     "ansi-regex": "^6.0.1",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
@@ -246,15 +246,14 @@
     "node-disk-info": "^1.3.0",
     "node-fetch": "^3.2.3",
     "path-browserify": "^1.0.1",
-    "pouchdb": "^7.3.0",
     "pouchdb-fetch": "^7.3.0",
     "pouchdb-find": "^7.3.0",
-    "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
-    "react-bootstrap-icons": "^1.7.2",
+    "react-bootstrap-icons": "^1.8.1",
     "react-data-table-component": "^7.4.7",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "regenerator-runtime": "^0.13.9",
     "winston": "^3.6.0"
   },
