--- a/package.json
+++ b/package.json
@@ -156,10 +156,8 @@
         "@pmmmwh/react-refresh-webpack-plugin": "0.5.1",
         "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
         "@testing-library/jest-dom": "^5.14.1",
-        "@testing-library/react": "^12.1.2",
+        "@testing-library/react": "^13.2.0",
         "@types/bootstrap": "^5.1.6",
-        "@types/enzyme": "^3.10.10",
-        "@types/enzyme-adapter-react-16": "^1.0.6",
         "@types/history": "4.7.9",
         "@types/jest": "^27.0.2",
         "@types/node": "16.11.6",
@@ -167,7 +165,6 @@
         "@types/react-dom": "^17.0.10",
         "@types/react-router": "^5.1.17",
         "@types/react-router-dom": "^5.3.2",
-        "@types/react-test-renderer": "^17.0.1",
         "@types/terser-webpack-plugin": "^5.0.4",
         "@types/webpack-env": "^1.16.3",
         "@typescript-eslint/eslint-plugin": "^5.2.0",
@@ -175,8 +172,10 @@
         "@wdio/local-runner": "^7.19.7",
         "@wdio/mocha-framework": "^7.19.7",
         "@wdio/spec-reporter": "^7.19.7",
+        "@wdio/types": "^7.19.5",
         "async": ">=2.6.4",
         "browserslist-config-erb": "^0.0.3",
+        "caniuse-lite": "^1.0.30001341",
         "chalk": "^4.1.2",
         "chromedriver": "^101.0.0",
         "concurrently": "^6.3.0",
@@ -185,13 +184,13 @@
         "css-loader": "^6.5.0",
         "css-minimizer-webpack-plugin": "^3.1.1",
         "detect-port": "^1.3.0",
-        "electron": "^15.3.0",
+        "electron": "^18.2.3",
         "electron-builder": "^22.13.1",
+        "electron-chromedriver": "^18.0.0",
         "electron-devtools-installer": "^3.2.0",
         "electron-notarize": "^1.1.1",
         "electron-rebuild": "^3.2.3",
         "eslint": "^7.32.0",
-        "eslint-config-airbnb-base": "^14.2.1",
         "eslint-config-erb": "^4.0.3",
         "eslint-plugin-compat": "^3.13.0",
         "eslint-plugin-import": "^2.25.2",
@@ -212,7 +211,6 @@
         "prettier": "^2.4.1",
         "react-refresh": "^0.10.0",
         "react-refresh-typescript": "^2.0.2",
-        "react-test-renderer": "^17.0.2",
         "rimraf": "^3.0.2",
         "sass": "^1.43.4",
         "sass-loader": "^12.3.0",
