--- a/.gitignore
+++ b/.gitignore
@@ -102,7 +102,8 @@ dist
 
 # TernJS port file
 .tern-port
-test-results/
-playwright-report/
-test/db/file-base/***
-test/db/***
+
+db/***
+all-logs/***
+release/***
+driver-logs/**
